DataTables on patient details

--- a/_source/LigaCancer/Views/Address/_AddAddress.cshtml
+++ b/_source/LigaCancer/Views/Address/_AddAddress.cshtml
@@ -6,7 +6,7 @@
       data-ajax="true"
       data-ajax-method="POST"
       data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccess"
+      data-ajax-success="AjaxSuccessPatient"
       data-ajax-loading="#submitSpinner">
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Endereço" }' />
