--- a/_source/LigaCancer/Views/FamilyMember/_DeleteFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/_DeleteFamilyMember.cshtml
@@ -5,7 +5,7 @@
       data-ajax="true"
       data-ajax-method="POST"
       data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccess"
+      data-ajax-success="AjaxSuccessPatient"
       data-ajax-loading="#submitSpinner">
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Apagar Membro Familiar" }' />
