--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -60,11 +60,11 @@
                                     <div class="col-lg-12">
                                         @if (Model.FamiliarityGroup)
                                         {
-                                            <p> <i class="fa fa-check-circle"></i> <strong>Partipa do grupo de convivência</strong></p>
+                                            <p> <i class="fa fa-check-circle"></i> <strong>Participa do grupo de convivência</strong></p>
                                         }
                                         else
                                         {
-                                            <p><i class="fa fa-times-circle"></i> <strong>Não partipa do grupo de convivência</strong></p>
+                                            <p><i class="fa fa-times-circle"></i> <strong>Não participa do grupo de convivência</strong></p>
                                         }
                                     </div>
                                 </div>
