Adjusts on datatables size

--- a/_source/LigaCancer/Views/TreatmentPlace/_AddTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_AddTreatmentPlace.cshtml
@@ -11,7 +11,7 @@
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Cidade" }' />
 
     <div class="modal-body form-horizontal">
-        <h4>Médico</h4>
+        <h4>Cidade</h4>
         <hr />
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
