--- a/_source/LigaCancer/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/_source/LigaCancer/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<environment names="Development, Production">
     <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-    <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/lib/jquery-ajax-unobtrusive/src/jquery.unobtrusive-ajax.js"></script>
     <script src="~/lib/sweetalert/sweetalert.min.js"></script>
 </environment>
 @*<environment names="Staging,Production">
