--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -5,7 +5,12 @@
 }
 
 @section Styles{
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <environment names="Development">
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/datatables.min.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
 }
 
 <main class="main">
@@ -60,7 +65,12 @@
 @section scripts
     {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/js/doctor.js"></script>
+    <environment names="Development">
+        <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/js/doctor.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/doctor.min.js" asp-append-version="true"></script>
+    </environment>
 }
