--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -6,9 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" asp-append-version="true" />
-    <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
-    <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
+    <environment names="Development">
+        <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
+    <environment  exclude="Development">
+        <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
+
     @RenderSection("Styles", required: false)
 </head>
 
@@ -114,10 +120,16 @@
         </div>
     </footer>
 
-    <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
-    <script src="~/lib/core-ui/coreui.min.js" asp-append-version="true"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
-    <script src="~/js/main.js" asp-append-version="true"></script>
+    <environment names="Development">
+        <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
+        <script src="~/lib/core-ui/coreui.min.js" asp-append-version="true"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
+        <script src="~/js/main.js" asp-append-version="true"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/dist/js/main.min.js" asp-append-version="true"></script>
+    </environment>
+    
     @RenderSection("Scripts", required: false)
 </body>
 
