--- a/_source/LigaCancer/wwwroot/css/style.css
+++ b/_source/LigaCancer/wwwroot/css/style.css
@@ -1,18 +1,4 @@
-﻿@charset "UTF-8";
-/*!
- * CoreUI - Open Source Dashboard UI Kit
- * @version v2.0.6
- * @link https://coreui.io
- * Copyright (c) 2018 creativeLabs Łukasz Holeczek
- * Licensed under MIT (https://coreui.io/license)
- */
-/*!
- * Bootstrap v4.1.3 (https://getbootstrap.com/)
- * Copyright 2011-2018 The Bootstrap Authors
- * Copyright 2011-2018 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-:root {
+﻿:root {
   --blue: #20a8d8;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -12993,7 +12979,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
   }
 }
 
-@media (min-width: 576px) {
+/*@media (min-width: 576px) {*/
   @-webkit-keyframes opacity {
     0% {
       opacity: 0;
@@ -13010,7 +12996,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
       opacity: 1;
     }
   }
-}
+/*}*/
 
 @media (min-width: 576px) and (max-width: 575.98px) {
   .sidebar-sm-show .main,
@@ -13124,7 +13110,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
   }
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {*/
   @-webkit-keyframes opacity {
     0% {
       opacity: 0;
@@ -13141,7 +13127,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
       opacity: 1;
     }
   }
-}
+/*}*/
 
 @media (min-width: 768px) and (max-width: 575.98px) {
   .sidebar-md-show .main,
@@ -13255,7 +13241,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
   }
 }
 
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {*/
   @-webkit-keyframes opacity {
     0% {
       opacity: 0;
@@ -13272,7 +13258,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
       opacity: 1;
     }
   }
-}
+/*}*/
 
 @media (min-width: 992px) and (max-width: 575.98px) {
   .sidebar-lg-show .main,
@@ -13386,7 +13372,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
   }
 }
 
-@media (min-width: 1200px) {
+/*@media (min-width: 1200px) {*/
   @-webkit-keyframes opacity {
     0% {
       opacity: 0;
@@ -13403,7 +13389,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
       opacity: 1;
     }
   }
-}
+/*}*/
 
 @media (min-width: 1200px) and (max-width: 575.98px) {
   .sidebar-xl-show .main,
