--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -6,9 +6,14 @@
 }
 
 @section Styles{
-    <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
-    <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <environment names="Development">
+        <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/patient.min.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
 }
 
 <main class="main">
@@ -85,10 +90,10 @@
                             <div class="card-body collapse show" id="patientInformationCollapse">
                                 <div class="row">
                                     @if (
-                                   Model.PatientInformation.TreatmentPlaces.Count() == 0 &&
-                                   Model.PatientInformation.Doctors.Count() == 0 &&
-                                   Model.PatientInformation.Medicines.Count() == 0 &&
-                                   Model.PatientInformation.CancerTypes.Count() == 0)
+                                 Model.PatientInformation.TreatmentPlaces.Count() == 0 &&
+                                 Model.PatientInformation.Doctors.Count() == 0 &&
+                                 Model.PatientInformation.Medicines.Count() == 0 &&
+                                 Model.PatientInformation.CancerTypes.Count() == 0)
                                     {
                                         <div class="col-lg-12">
                                             <p>Nenhuma informação cadastrada!</p>
@@ -198,9 +203,9 @@
                                 <div class="row">
 
                                     @if (
-                                   string.IsNullOrEmpty(Model.Naturality.City) &&
-                                   string.IsNullOrEmpty(Model.Naturality.Country) &&
-                                   string.IsNullOrEmpty(Model.Naturality.State))
+                                 string.IsNullOrEmpty(Model.Naturality.City) &&
+                                 string.IsNullOrEmpty(Model.Naturality.Country) &&
+                                 string.IsNullOrEmpty(Model.Naturality.State))
                                     {
                                         <div class="col-lg-12">
                                             <p>Nenhuma informação cadastrada!</p>
@@ -258,7 +263,7 @@
                                 </div>
                             </div>
                             <div class="card-body collapse show" id="phoneCollapse">
-                                <table id="phoneTable" class="table table-bordered table-striped table-condensed"></table>
+                                <table id="phoneTable" class="table table-bordered table-striped table-condensed text-center"></table>
                             </div>
                         </div>
                     </div>
@@ -277,7 +282,7 @@
                                 </div>
                             </div>
                             <div class="card-body collapse show" id="addressCollapse">
-                                <table id="addressTable" class="table table-bordered table-striped table-condensed"></table>
+                                <table id="addressTable" class="table table-bordered table-striped table-condensed text-center"></table>
                             </div>
                         </div>
                     </div>
@@ -310,7 +315,7 @@
 
                                 <hr />
 
-                                <table id="familyMemberTable" class="table table-bordered table-striped table-condensed"></table>
+                                <table id="familyMemberTable" class="table table-bordered table-striped table-condensed text-center"></table>
 
                             </div>
                         </div>
@@ -330,7 +335,7 @@
                                 </div>
                             </div>
                             <div class="card-body collapse show" id="attachmentsCollapse">
-                                <table id="attachmentsTable" class="table table-bordered table-striped table-condensed"></table>
+                                <table id="attachmentsTable" class="table table-bordered table-striped table-condensed text-center"></table>
                             </div>
                         </div>
                     </div>
@@ -345,11 +350,16 @@
 
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/lib/select2/js/select2.min.js"></script>
-    <script>
-        var patientId = @Model.PatientId;
-    </script>
-    <script src="~/js/patient-details.js"></script>
+    <environment names="Development">
+        <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+        <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/lib/select2/js/select2.min.js"></script>
+        <script>
+            var patientId = @Model.PatientId;
+        </script>
+        <script src="~/js/patient-details.js"></script>
+    </environment>
+    <environment exclude="Development">
+        @* Todo *@
+    </environment>
 }
