--- a/_source/LigaCancer/Views/Account/Login.cshtml
+++ b/_source/LigaCancer/Views/Account/Login.cshtml
@@ -7,14 +7,13 @@
 @using Microsoft.AspNetCore.Identity;
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
-
 @{
     Layout = null;
 }
 
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="pt-br">
 <head>
     <base href="./">
     <meta charset="utf-8">
