--- a/_source/LigaCancer/Views/Account/Login.cshtml
+++ b/_source/LigaCancer/Views/Account/Login.cshtml
@@ -19,9 +19,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login | Rede Videirense do Cancêr</title>
-    <!-- Icons-->
-    <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" />
-    <link href="~/css/style.css" rel="stylesheet" />
+    <environment names="Development">
+        <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
+    <environment exclude="Development">
+        <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
+    </environment>
 </head>
 <body class="app flex-row align-items-center">
     <div class="container">
