--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -174,6 +174,6 @@
         <script src="~/js/home.js"></script>
     </environment>
     <environment exclude="Development">
-        @* Todo *@
+        <script src="~/dist/js/home.min.js" asp-append-version="true"></script>
     </environment>
 }
