--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -89,11 +89,10 @@
                             </div>
                             <div class="card-body collapse show" id="patientInformationCollapse">
                                 <div class="row">
-                                    @if (
-                                 Model.PatientInformation.TreatmentPlaces.Count() == 0 &&
-                                 Model.PatientInformation.Doctors.Count() == 0 &&
-                                 Model.PatientInformation.Medicines.Count() == 0 &&
-                                 Model.PatientInformation.CancerTypes.Count() == 0)
+                                    @if (Model.PatientInformation.TreatmentPlaces.Count() == 0 &&
+                                      Model.PatientInformation.Doctors.Count() == 0 &&
+                                      Model.PatientInformation.Medicines.Count() == 0 &&
+                                      Model.PatientInformation.CancerTypes.Count() == 0)
                                     {
                                         <div class="col-lg-12">
                                             <p>Nenhuma informação cadastrada!</p>
@@ -202,10 +201,9 @@
                             <div class="card-body collapse show" id="naturalityCollapse">
                                 <div class="row">
 
-                                    @if (
-                                 string.IsNullOrEmpty(Model.Naturality.City) &&
-                                 string.IsNullOrEmpty(Model.Naturality.Country) &&
-                                 string.IsNullOrEmpty(Model.Naturality.State))
+                                    @if (string.IsNullOrEmpty(Model.Naturality.City) &&
+                                      string.IsNullOrEmpty(Model.Naturality.Country) &&
+                                      string.IsNullOrEmpty(Model.Naturality.State))
                                     {
                                         <div class="col-lg-12">
                                             <p>Nenhuma informação cadastrada!</p>
@@ -350,16 +348,16 @@
 
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script>
+            var patientId = @Model.PatientId;
+    </script>
     <environment names="Development">
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
         <script src="~/lib/select2/js/select2.min.js"></script>
-        <script>
-            var patientId = @Model.PatientId;
-        </script>
         <script src="~/js/patient-details.js"></script>
     </environment>
     <environment exclude="Development">
-        @* Todo *@
+        <script src="~/dist/js/patient-details.min.js" asp-append-version="true"></script>
     </environment>
 }
