--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -301,11 +301,15 @@
                             <div class="card-body collapse show" id="familyMembersCollapse">
 
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
+                                        <strong>Renda Paciente:</strong>
+                                        <span>@Model.Family?.MonthlyIncome.ToString("C2")</span>
+                                    </div>
+                                    <div class="col-lg-4">
                                         <strong>Renda Familiar:</strong>
                                         <span id="familyIncome">@Model.Family?.FamilyIncome.ToString("C2")</span>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <strong> Renda Per Capita:</strong>
                                         <span id="perCapitaIncome">@Model.Family?.PerCapitaIncome.ToString("C2")</span>
                                     </div>
