--- a/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
@@ -47,6 +47,11 @@
                 <span asp-validation-for="Profession" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="MonthlyIncome" class="control-label"></label>
+                <input asp-for="MonthlyIncome" class="form-control" />
+                <span asp-validation-for="MonthlyIncome" class="text-dange"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Sex" class="control-label"></label>
                 <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control"></select>
                 <span asp-validation-for="Sex" class="text-danger"></span>
